--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,30 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <style>
+      html,
+      body {
+        margin: 0;
+      }
+
+      .shell .title {
+        background-color: green;
+        color: #fff;
+        text-align: center;
+        font: 32px sans-serif;
+        height: 2em;
+        font-size: 2em;
+        padding-top: 0.5em;
+        font-weight: bold;
+      }
+
+      .shell {
+        margin: 0.5em 1em;
+        background-color: #e0e0e0;
+        min-height: 250px;
+      }
+    </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -29,6 +53,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div class="shell">
+      <div class="title">loading...</div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
