--- a/public/index.html
+++ b/public/index.html
@@ -67,4 +67,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+    const isProduction = "%NODE_ENV%" === "production";
+
+    if (isProduction && "serviceWorker" in navigator) {
+      navigator.serviceWorker.register("sw.js");
+    }
+  </script>
 </html>
